Rearrange Header + change status bar color

--- a/noob-pwa/public/index.html
+++ b/noob-pwa/public/index.html
@@ -22,7 +22,7 @@
     -->
   <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="white">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#483075">
   <meta name="apple-mobile-web-app-title" content="iTwitch">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/icons/icon-152x152.png">
 
